sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:11: error: not found: value j
    echange(j,i)
            ^